--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
   <title>Advice generator</title>
 </head>
 <body>
-
   <!-- Main -->
   <main>
 
@@ -17,9 +16,9 @@
     <div class="advice-container">
 
       <!-- Advice ID goes here -->
-      <p class="advice-id">
+      <h1 class="advice-id">
         Advice #<span id="advice-number"></span>
-      </p>
+      </h1>
 
       <!-- Advice text goes here -->
       <p class="advice-text">
