--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
   <meta charset="UTF-8">
   <!-- displays site properly based on user's device -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/images/site.webmanifest">
   <link rel="stylesheet" href="styles.css">
   <title>Advice generator</title>
 </head>
@@ -47,7 +50,7 @@
   </footer>
 
   <!-- Script -->
-  <script src="index.js"></script>
+  <script src="index.js" type="module"></script>
 
 </body>
 </html>
