--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   </main>
 
   <!-- Attribution -->
-  <footer class="attribution">
+  <!-- <footer class="attribution">
     Challenge by 
     <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">
       Frontend Mentor
@@ -47,7 +47,7 @@
     <a href="https://github.com/Krrish105">
       Sankalp Sharma
     </a>.
-  </footer>
+  </footer> -->
 
   <!-- Script -->
   <script src="index.js" type="module"></script>
